# ias_project

./: .Ias_Prasentation_2.pptx.icloud  .gitignore  Ias_Prasentation_2.pptx  README.md  URLs.txt  articles.txt  cborDatabase.sqlite  pyproject.toml  test.json
app/: runner.py
app/bacnet/: core.py
app/gui/: Interface.py  MainWindow.py  ScraperInterface.py  interface.py  main_window.py  (+2 more)
logic/: article.py  file_handler.py
pcap/: 00810e4ebc997e0dfc98e634efddb9bedfd8dd9d7080cc1f2827e86121634748_v.pcap  107578f3f8a860185b303e851198ffc44f5421d18780fc8c8e86dec168e62656_v.pcap  3f7258f591051c3968f82f035a60c0f4a7428e4d030e3a992ac2ca0128301ebc_v.pcap  4eb0cc007ecbb4c59719448bfb945caef52b3d5b5f6abff5d0eb2cce54bc687b_v.pcap  5f9e36b278e1599ae1e768fb65204089d43170181e7278b9c32d5326d5af6a59_v.pcap  77a9602a91955375125763b41d040785779567103a9a39bf4f7e6683fe65f91a_v.pcap  8969741196fdb2b6c5e64ae1bb295c7905aef00eef1c053610d732d81cdced2f_v.pcap  8a9999ffc8012b489248c8e68d747fc894a2b0bcc918b6e4254be0b6d2e124cc_v.pcap  8c4ef6bdc7fddcb7d652281159d81ba50c3d0e3a78480c930c3a3c7c3ac5f94d_v.pcap  92eed4056136c6338840d92f40c08da55367abad7d971337691716f896ec9c1d_v.pcap  95db16db67cfdaa9dc33f12ec94c46bfa3a4c0662572c9fee8d6e74e4b329d37_v.pcap  9cea1578be75c186cd7a7de30d7ecb30de1155f9844f16dc6e6c2fc1053ee47c_v.pcap  adf8a51e825a4c70723c5bda686025babec1cbbb0835f7f10e0fa2e28daa39d3_v.pcap  af84975df557824e086f3da0bf8112b1f3abffb49e02ee445fe823993730fa7a_v.pcap  b075b3352db88da8ad717201c3759ada47eaac35cf9b943356924fb7c2b167a8_v.pcap
scraper/: URLs.txt  Untitled-1.html  articles.html
src/: main.py
(+35 files in other folders)
