[tool.poetry]
name = "news-scraper"
version = "0.1.0"
description = ""
authors = ["Simon Laube <simon.laube96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
