[tool.poetry]
name = "news-scraper"
version = "0.1.0"
description = ""
authors = ["Simon Laube <simon.laube96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
QtAwesome = "^1.0.2"
cbor2 = "^5.4.0"
PyNaCl = "^1.4.0"
SQLAlchemy = "^1.4.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
